Updating app to demo

--- a/index.njk
+++ b/index.njk
@@ -9,8 +9,8 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
     <h1 class="font-semibold tracking-tight text-4xl sm:text-5xl">Deploy your apps with a git push</h1>
     <p class="mt-4 mb-6">/dev/push is an open source alternative to Vercel and Render, allowing you to deploy your apps straight from GitHub.</p>
     <footer class="flex flex-col sm:flex-row items-center justify-center gap-2 pt-2">
-      <a class="btn-lg max-sm:w-full" href="https://app.devpu.sh">Sign up online</a>
-      <a class="btn-lg-outline max-sm:w-full" href="https://github.com/hunvreus/devpush">Get the source code</a>
+      <a class="btn-lg max-sm:w-full" href="/docs/installation">Self-host</a>
+      <a class="btn-lg-outline max-sm:w-full" href="https://demo.devpu.sh">Online demo</a>
     </footer>
   </header>
   <div class="rounded-2xl overflow-hidden relative">
@@ -170,7 +170,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
         </h2>
       </summary>
       <section class="pb-4 text-sm">
-        <p>Yes, /dev/push is 100% free and open source, you can host it on your own server. There is also an <a href="https://app.devpu.sh" target="_blank">online version</a> which is open to a few beta testers but won't be free since I have to pay for hosting.</p>
+        <p>Yes, /dev/push is 100% free and open source, you can host it on your own server. There is an <a href="https://demo.devpu.sh" target="_blank">online demo</a> which you can use to try it out and resets every hour (do not use it for production).</p>
       </section>
     </details>
     <details class="group border-b last:border-b-0">
