--- a/_includes/partials/docs/header.njk
+++ b/_includes/partials/docs/header.njk
@@ -16,7 +16,7 @@
     <a class="btn-sm-ghost" href="/docs" aria-pressed="true">Docs</a>
     <a class="btn-sm-icon-ghost" href="https://devpu.sh/chat">{% include "logos/discord.svg" %}</a>
     <a class="btn-sm-icon-ghost" href="https://github.com/hunvreus/devpush">{% include "logos/github.svg" %}</a>
-    <a class="btn-sm-outline" href="https://app.devpu.sh">Sign in</a>
+    <a class="btn-sm-outline" href="https://demo.devpu.sh">Demo</a>
     <button
       type="button"
       aria-label="Toggle dark mode"
@@ -51,8 +51,8 @@
         GitHub
         {% include "logos/github.svg" %}
       </a>
-      <a class="btn-lg-ghost justify-between" href="https://app.devpu.sh">
-        Sign in
+      <a class="btn-lg-ghost justify-between" href="https://demo.devpu.sh">
+        Demo
         {% include "icons/arrow-right.svg" %}
       </a>
     </nav>
