--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -27,7 +27,7 @@
       {% include "logos/github.svg" %}
       GitHub
     </a>
-    <a class="max-sm:w-full btn-sm-outline" href="https://app.devpu.sh">Sign in</a>
+    <a class="max-sm:w-full btn-sm-outline" href="https://demo.devpu.sh">Demo</a>
   </nav>
 
   <div class="sm:hidden" x-data="{ isOpen: false }">
@@ -50,8 +50,8 @@
         GitHub
         {% include "logos/github.svg" %}
       </a>
-      <a class="btn-lg-ghost justify-between" href="https://app.devpu.sh">
-        Sign in
+      <a class="btn-lg-ghost justify-between" href="https://demo.devpu.sh">
+        Demo
         {% include "icons/arrow-right.svg" %}
       </a>
     </nav>
