Making GitHub App public by default

--- a/_includes/partials/gh-app.njk
+++ b/_includes/partials/gh-app.njk
@@ -175,7 +175,7 @@
           ],
           setup_url: `${appBaseUrl}/api/github/install/callback`,
           setup_on_update: true,
-          public: false,
+          public: true,
           default_permissions: {
             administration: "write",
             checks: "write",
