--- a/_includes/partials/gh-app.njk
+++ b/_includes/partials/gh-app.njk
@@ -41,7 +41,7 @@
     <section>
       <div class="h-64 flex items-center justify-center border border-input rounded-md dark:bg-input/30 shadow-xs" :class="{ 'hidden': !loading }">
         <span class="flex items-center gap-x-2 text-muted-foreground [&>svg]:size-4 [&>svg]:animate-spin">
-          {% include "icons/loader.svg" %}
+          {% lucide "loader" %}
           <span>Retrieving credentials...</span>
         </span>
       </div>
