--- a/index.njk
+++ b/index.njk
@@ -18,7 +18,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <img src="/assets/images/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
       <img src="/assets/images/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
       <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-1 ring-background/20 hover:scale-1.5 group-hover:scale-105 transition-all">
-        {% include "icons/circle-play.svg" %}
+        {% lucide "circle-play" %}
         <span class="max-sm:hidden">Watch demo</span>
         <span class="sm:hidden">Demo</span>
       </div>
@@ -166,7 +166,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           Is this free?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
@@ -177,7 +177,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           Do you only support GitHub?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
@@ -189,7 +189,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           Who built this?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
@@ -200,7 +200,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           Why did you build this?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
@@ -211,7 +211,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           How is this built?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
@@ -222,7 +222,7 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
       <summary class="w-full focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] transition-all outline-none rounded-md">
         <h2 class="flex flex-1 items-center justify-between gap-4 py-4 text-lg text-left font-semibold hover:underline [&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:shrink-0 [&>svg]:transition-transform [&>svg]:duration-200 [&>svg]:group-open:rotate-180">
           How can I help?
-          {% include "icons/chevron-down.svg" %}
+          {% lucide "chevron-down" %}
         </h2>
       </summary>
       <section class="pb-4 text-sm">
