--- a/_includes/partials/features/deployments.njk
+++ b/_includes/partials/features/deployments.njk
@@ -1,7 +1,7 @@
 <ul>
   <li class="flex gap-x-4 items-center border border-border/100 border-b-0 last:border-b first:rounded-t-xl last:rounded-b-xl px-4 h-12 text-sm">
     <span class="text-muted-foreground [&>svg]:size-4 flex items-center gap-x-2">
-      {% include "icons/loader.svg" %}
+      {% lucide "loader" %}
     </span>
     <div class="font-medium font-mono text-[13px]">d2fc5a3</div>
     <div class="flex items-center gap-x-2 text-muted-foreground">
@@ -14,17 +14,17 @@
     </div>
     <div class="flex items-center gap-x-2 text-muted-foreground whitespace-nowrap">now</div>
     <div class="flex items-center gap-x-2 text-muted-foreground [&>svg]:size-4 [&>svg]:shrink-0 min-w-0">
-      {% include "icons/git-branch.svg" %}
+      {% lucide "git-branch" %}
       <span class="truncate">main</span>
     </div>
     <div class="flex items-center gap-x-2 text-muted-foreground min-w-0 [&>svg]:opacity-50 [&>svg]:dark:opacity-60 [&>svg]:size-4 [&>svg]:shrink-0">
-      {% include "icons/git-commit-horizontal.svg" %}
+      {% lucide "git-commit-horizontal" %}
       <span class="truncate">feat: add user authentication middleware</span>
     </div>
   </li>
   <li class="flex gap-x-4 items-center border border-border/100 border-b-0 last:border-b first:rounded-t-xl last:rounded-b-xl px-4 h-12 text-sm">
     <span class="text-destructive [&>svg]:size-4 flex items-center gap-x-2">
-      {% include "icons/circle-x.svg" %}
+      {% lucide "circle-x" %}
     </span>
     <div class="font-medium font-mono text-[13px]">b33008f</div>
     <div class="flex items-center gap-x-2 text-muted-foreground">
@@ -37,17 +37,17 @@
     </div>
     <div class="flex items-center gap-x-2 text-muted-foreground whitespace-nowrap">5 minutes ago</div>
     <div class="flex items-center gap-x-2 text-muted-foreground [&>svg]:opacity-50 [&>svg]:dark:opacity-60 [&>svg]:size-4 [&>svg]:shrink-0 min-w-0">
-      {% include "icons/git-branch.svg" %}
+      {% lucide "git-branch" %}
       <span class="truncate">main</span>
     </div>
     <div class="flex items-center gap-x-2 text-muted-foreground min-w-0 [&>svg]:opacity-50 [&>svg]:dark:opacity-60 [&>svg]:size-4 [&>svg]:shrink-0">
-      {% include "icons/git-commit-horizontal.svg" %}
+      {% lucide "git-commit-horizontal" %}
       <span class="truncate">fix: resolve database connection timeout</span>
     </div>
   </li>
   <li class="flex gap-x-4 items-center border border-border/100 border-b-0 last:border-b first:rounded-t-xl last:rounded-b-xl px-4 h-12 text-sm">
     <span class="text-green-600 dark:text-green-500 [&>svg]:size-4 flex items-center gap-x-2">
-      {% include "icons/circle-check.svg" %}
+      {% lucide "circle-check" %}
     </span>
     <div class="font-medium font-mono text-[13px]">310281b</div>
     <div class="flex items-center gap-x-2 text-muted-foreground">
@@ -60,7 +60,7 @@
     </div>
     <div class="flex items-center gap-x-2 text-muted-foreground whitespace-nowrap">1 hour ago</div>
     <div class="flex items-center gap-x-2 text-muted-foreground min-w-0 [&>svg]:opacity-50 [&>svg]:dark:opacity-60 [&>svg]:size-4 [&>svg]:shrink-0">
-      {% include "icons/git-commit-horizontal.svg" %}
+      {% lucide "git-commit-horizontal" %}
       <span class="truncate">docs: update API endpoint documentation</span>
     </div>
   </li>
