--- a/_includes/partials/features/env-vars.njk
+++ b/_includes/partials/features/env-vars.njk
@@ -13,11 +13,11 @@
   </div>
   <div class="flex items-center gap-x-2">
     <div class="btn-sm-outline" tabindex="-1">
-      {% include "icons/plus.svg" %}
+      {% lucide "plus" %}
       Add variable
     </div>
     <div class="btn-sm-icon-outline" tabindex="-1">
-      {% include "icons/file-text.svg" %}
+      {% lucide "file-text" %}
     </div>
   </div>
 </div>
