--- a/_includes/partials/features/github.njk
+++ b/_includes/partials/features/github.njk
@@ -11,7 +11,7 @@
     </span>
     &bull;
     <span class="flex items-center gap-x-2 [&>svg]:size-4">
-      {% include "icons/star.svg" %}
+      {% lucide "star" %}
       <span id="github-stars">1</span>
     </span>
     &bull;
