--- a/_includes/partials/features/members.njk
+++ b/_includes/partials/features/members.njk
@@ -11,7 +11,7 @@
     </div>
     <button class="btn-outline pointer-events-none font-normal [&>svg]:text-muted-foreground [&>svg]:opacity-50" tabindex="-1" disabled>
       Owner
-      {% include "icons/chevron-down.svg" %}
+      {% lucide "chevron-down" %}
     </button>
   </div>
   <div class="border-b flex items-center gap-x-4 border-border/50 h-12">
@@ -26,7 +26,7 @@
     </div>
     <div class="btn-outline pointer-events-none font-normal [&>svg]:text-muted-foreground [&>svg]:opacity-50" tabindex="-1">
       Admin
-      {% include "icons/chevron-down.svg" %}
+      {% lucide "chevron-down" %}
     </div>
   </div>
   <div class="border-b flex items-center gap-x-4 border-border/50 h-12">
@@ -41,7 +41,7 @@
     </div>
     <div class="btn-outline pointer-events-none font-normal [&>svg]:text-muted-foreground [&>svg]:opacity-50" tabindex="-1">
       Admin
-      {% include "icons/chevron-down.svg" %}
+      {% lucide "chevron-down" %}
     </div>
   </div>
 </div>
