--- a/_includes/partials/features/presets.njk
+++ b/_includes/partials/features/presets.njk
@@ -3,7 +3,7 @@
     {% include "logos/python.svg" %}
     Python
     <span class="[&>svg]:size-4 [&>svg]:opacity-50 [&>svg]:text-muted-foreground ml-2">
-      {% include "icons/chevron-down.svg" %}
+      {% lucide "chevron-down" %}
     </span>
   </div>
   <div class="[&_svg]:size-4 text-sm bg-popover text-popover-foreground rounded-md border shadow-md p-1">
@@ -11,7 +11,7 @@
       {% include "logos/python.svg" %}
       Python
       <span class="[&>svg]:size-4 [&>svg]:opacity-50 ml-2">
-        {% include "icons/check.svg" %}
+        {% lucide "check" %}
       </span>
     </div>
     <div class="flex items-center gap-x-2 rounded-sm px-2 py-1.5">
