--- a/_includes/partials/features/urls.njk
+++ b/_includes/partials/features/urls.njk
@@ -3,21 +3,21 @@
     <div class="text-xs text-muted-foreground">Deployment URL</div>
     <div class="flex items-center justify-between gap-x-2 [&>svg]:size-3 [&>svg]:opacity-50 [&>svg]:shrink-0">
       <span class="truncate">flask-acme-id-310281b.devpush.app</span>
-      {% include "icons/external-link.svg" %}
+      {% lucide "external-link" %}
     </div>
   </li>
   <li class="space-y-1 w-full">
     <div class="text-xs text-muted-foreground">Branch URL</div>
     <div class="flex items-center justify-between gap-x-2 [&>svg]:size-3 [&>svg]:opacity-50 [&>svg]:shrink-0">
       <span class="truncate">flask-acme-branch-main.devpush.app</span>
-      {% include "icons/external-link.svg" %}
+      {% lucide "external-link" %}
     </div>
   </li>
   <li class="space-y-1 w-full">
     <div class="text-xs text-muted-foreground">Environment URL</div>
     <div class="flex items-center justify-between gap-x-2 [&>svg]:size-3 [&>svg]:opacity-50 [&>svg]:shrink-0">
       <span class="truncate">flask-acme.devpush.app</span>
-      {% include "icons/external-link.svg" %}
+      {% lucide "external-link" %}
     </div>
   </li>
 </ul>
