--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -16,10 +16,10 @@
       class="btn-sm-icon-ghost size-6 text-muted-foreground hover:text-foreground"
     >
       <span class="hidden dark:block">
-        {% include "icons/sun.svg" %}
+        {% lucide "sun" %}
       </span>
       <span class="block dark:hidden">
-        {% include "icons/moon.svg" %}
+        {% lucide "moon" %}
       </span>
     </button>
   </nav>
