--- a/_includes/partials/features/domains.njk
+++ b/_includes/partials/features/domains.njk
@@ -3,7 +3,7 @@
     <div class="border-y flex items-center gap-x-2 border-border/50 h-12">
       <div class="font-medium truncate w-32">devpu.sh</div>
       <div class="flex-1 flex items-center gap-x-2 text-muted-foreground [&>svg]:size-4">
-        {% include "icons/globe.svg" %}
+        {% lucide "globe" %}
         <span class="truncate">Proxy</span>
       </div>
       <div class="flex-1 text-muted-foreground">
@@ -18,7 +18,7 @@
     <div class="border-b flex items-center gap-x-2 border-border/50 h-12">  
       <div class="font-medium truncate w-32">www.devpu.sh</div>
       <div class="flex-1 flex items-center gap-x-2 text-muted-foreground [&>svg]:size-4">
-        {% include "icons/corner-down-right.svg" %}
+        {% lucide "corner-down-right" %}
         <span class="truncate">301 - Moved Permanently</span>
       </div>
       <div class="flex-1 text-muted-foreground">
@@ -33,7 +33,7 @@
   </div>
   <div class="flex items-center gap-x-2">
     <div class="btn-sm-outline pointer-events-none" tabindex="-1">
-      {% include "icons/plus.svg" %}
+      {% lucide "plus" %}
       Add domain
     </div>
   </div>
