--- a/_includes/partials/features/rollback.njk
+++ b/_includes/partials/features/rollback.njk
@@ -1,14 +1,14 @@
 <div class="flex flex-col items-end gap-y-1">
   <div class="btn-sm-icon-ghost" aria-pressed="true" tabindex="-1">
-    {% include "icons/ellipsis.svg" %}
+    {% lucide "ellipsis" %}
   </div>
   <div class="[&_svg]:size-4 [&_svg]:opacity-50 text-sm bg-popover text-popover-foreground rounded-md border shadow-md p-1">
     <div class="flex items-center gap-x-2 rounded-sm px-2 py-1.5 bg-accent text-accent-foreground">
-      {% include "icons/undo-2.svg" %}
+      {% lucide "undo-2" %}
       Instant rollback
     </div>
     <div class="flex items-center gap-x-2 px-2 py-1.5">
-      {% include "icons/redo-2.svg" %}
+      {% lucide "redo-2" %}
       Redeploy
     </div>
   </div>
