--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,8 @@
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-purple-500: oklch(62.7% 0.265 303.9);
+    --color-fuchsia-400: oklch(74% 0.238 322.16);
+    --color-fuchsia-600: oklch(59.1% 0.293 322.896);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -337,12 +339,6 @@
   }
   .-mr-1\.5 {
     margin-right: calc(var(--spacing) * -1.5);
-  }
-  .-mr-2 {
-    margin-right: calc(var(--spacing) * -2);
-  }
-  .mr-2 {
-    margin-right: calc(var(--spacing) * 2);
   }
   .mr-4 {
     margin-right: calc(var(--spacing) * 4);
@@ -726,12 +722,6 @@
   .bg-green-500 {
     background-color: var(--color-green-500);
   }
-  .bg-input\/50 {
-    background-color: var(--color-input);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-input) 50%, transparent);
-    }
-  }
   .bg-muted {
     background-color: var(--color-muted);
   }
@@ -930,6 +920,9 @@
   }
   .text-destructive {
     color: var(--color-destructive);
+  }
+  .text-fuchsia-600 {
+    color: var(--color-fuchsia-600);
   }
   .text-green-600 {
     color: var(--color-green-600);
@@ -1255,6 +1248,11 @@
   .dark\:text-blue-400 {
     &:is(.dark *) {
       color: var(--color-blue-400);
+    }
+  }
+  .dark\:text-fuchsia-400 {
+    &:is(.dark *) {
+      color: var(--color-fuchsia-400);
     }
   }
   .dark\:text-green-500 {
