--- a/index.njk
+++ b/index.njk
@@ -15,8 +15,8 @@ description: /dev/push is an open source alternative to Vercel and Render, allow
   </header>
   <div class="rounded-2xl overflow-hidden relative">
     <a href="https://youtu.be/Ii9Tzttgif4" class="cursor-pointer group" target="_blank">
-      <img src="/assets/images/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
-      <img src="/assets/images/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
+      <img src="/media/screenshot-dark.png" alt="Screenshot of /dev/push" class="w-full hidden dark:block">
+      <img src="/media/screenshot-light.png" alt="Screenshot of /dev/push" class="w-full dark:hidden">
       <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-primary text-background rounded-full pl-2 pr-4 h-10 flex items-center gap-x-2 [&>svg]:size-6 [&>svg]:stroke-[1.5] font-medium ring-1 ring-background/20 hover:scale-1.5 group-hover:scale-105 transition-all">
         {% lucide "circle-play" %}
         <span class="max-sm:hidden">Watch demo</span>
