--- a/_includes/partials/gh-app.njk
+++ b/_includes/partials/gh-app.njk
@@ -173,7 +173,7 @@
           return;
         }
         setStorage(HOSTNAME_KEY, hostname);
-        const protocol = (hostname === 'localhost' || hostname.endsWith('.local')) ? 'http' : 'https';
+        const protocol = hostname === 'localhost' || hostname.endsWith('.local') ? 'http' : 'https';
         const appBaseUrl = `${protocol}://${hostname}`;
         const callbackUrl = window.location.origin + window.location.pathname;
         const appName = `devpush-${this.useOrg && this.orgId ? this.orgId.trim() : Math.random().toString(36).substring(2, 8)}`;
@@ -181,7 +181,7 @@
           name: appName,
           url: appBaseUrl,
           hook_attributes: {
-            url: `${appBaseUrl}/api/github/webhook`,
+            url: hostname === 'localhost' ? 'http://example.com/api/github/webhook' : `${appBaseUrl}/api/github/webhook`,
             active: true
           },
           redirect_url: `${callbackUrl}`,
